--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     background-color: #0A0A0A;
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 .nav-bar{
     color: white;
@@ -31,7 +32,7 @@ body{
     margin: 0 2em 1em;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
 }
 .presentation{
     color: white;
@@ -39,6 +40,11 @@ body{
     display: flex;
     column-gap: 4em;
 }
+ .h2{
+        text-transform: uppercase;
+        margin-bottom: 0.8rem;
+        font-size: 3rem;
+    }
 .me{
     width: 50%;
     padding: 1em;
@@ -49,11 +55,6 @@ body{
     justify-content: center;
     gap: 1rem;
     
-    h2{
-        text-transform: uppercase;
-        margin-bottom: 0.8rem;
-        font-size: 3rem;
-    }
     p{
         color: rgba(255, 255, 255, 0.8);
         line-height: 1.4;
@@ -92,7 +93,7 @@ body{
     
     .btn-links{
         width: 100%;
-
+        margin-top: 1rem;
     }
 }
 .picture{
@@ -101,4 +102,77 @@ body{
         width: 95%;
         height: 90%;
     }
+}
+.projet{
+    margin-left: 2rem;
+    h2{
+        text-transform: uppercase;
+        font-size: 2.2em;
+        margin-bottom: 0.6em;
+    }
+    p{
+        color: rgba(255, 255, 255, 0.8);
+        line-height: 1.3;
+    }
+}
+.fa-arrow-right{
+    transform: rotate(-50deg);
+}
+.container-grid{
+    margin-top: 10rem;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(3, 30%);
+    row-gap: 4em;
+    column-gap: 2em;
+    grid-template-areas: "projet1 projet2""projet3 projet4""projet5 projet6";
+    .capture{
+        background-color: #1A1A1A;
+        padding: 5%;
+        display: grid;
+        place-items: center;
+        border-radius: 5%;
+         img{
+            width: 70%;
+            height: 80%;
+            border-radius: 3%;
+        }
+    }
+    .projet1{
+        grid-area: projet1;    
+    }
+     .projet2{
+        grid-area: projet2;
+        h3{
+            margin-bottom: 1rem;
+        } 
+        ul{
+            display: flex;
+            list-style: none;
+            gap: 0.6rem;
+            margin-top: 1em;
+        }
+        a{
+            color: #D3E97A;
+        }
+    }
+     .projet3{
+        grid-area: projet3;
+    }
+     .projet4{
+        grid-area: projet4;
+    }
+     .projet5{
+        grid-area: projet5;
+    }
+     .projet6{
+        grid-area: projet6;
+    }
+.info-projet{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+    padding: 1em;
+    color: white;
+}
 }
