--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
         display: inline-block;
         padding: 0.5rem;
         border-radius: 2rem;
-        width: 35%;
+        /* width: 35%; */
         border: none;
         background-color: #D3E97A;
         text-transform: uppercase;
@@ -124,7 +124,7 @@ body{
     grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(3, 30%);
     row-gap: 6em;
-    column-gap: 1em;
+    column-gap: 2em;
     grid-template-areas: "projet1 projet2""projet3 projet4""projet5 projet6";
     .capture{
         background-color: #1A1A1A;
@@ -187,7 +187,7 @@ body{
         text-transform: uppercase;
         font-size: 3rem;
         font-weight: bold;
-        text-align: end;
+        /* text-align: center; */
         padding-right: 1.5rem;
     }
     .moi-contenu{
@@ -208,16 +208,28 @@ body{
         }
     }
 }
-footer{
+.footer{
+    
     margin: 3em 1em 1em;
-    display: flex;
-    gap: 1em;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-auto-rows: 1fr; */
+    grid-template-areas: "mail form" "copy copy";
     line-height: 2;
     p, label{
-        color: rgba(255, 255, 255, 0.8);
+        color: rgba(255, 255, 255, 0.6);
+    }
+    .mail-link{
+        grid-area: mail;
+        
+    }
+    .contact{
+        grid-area: form;
+    }
+    .copyright{
+        grid-area: copy;
     }
     .mail-link, .contact{
-        width: 50%;
         form{
             display:flex;
             flex-direction: column;
@@ -237,7 +249,50 @@ footer{
         textarea{
             height: 8em;
         }
+        .fa-brands{
+            color: #D3E97A;
+            margin-top: 1em;
+            font-size: 1.5em;
+            margin-right: 0.5em;
+        }
+    }   
+}
+@media (max-width: 700px) {
+    .h2{
+        font-size: 1em;
     }
-    
-    
+    .nav-links{
+        display: none;
+    }
+    .hero{
+        .presentation,.container-grid, .propos{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .me, .picture, .capture, .projet2, .projet4, .projet6, .btn-links{
+                width: 100%;
+            }
+        }
+        
+        }
+    .footer{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-areas: "mail""contact""copy";
+            row-gap: 1em;
+            .contact{
+                grid-area: contact;
+                
+            }
+            input[type=submit]{
+                width: 40%;
+                border: 1em;
+            }
+            .mail-link{
+                grid-area: mail;
+            }
+            .copyright{
+                grid-area: copy;
+            }
+        }
 }
