--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body{
         background-color: #D3E97A;
         text-transform: uppercase;
         font-weight: bold;
+        cursor: pointer;
         span{
             background-color: black;
             border: 1px solid;
@@ -143,7 +144,7 @@ body{
     }
 }
 .picture:hover{
-    transform: skewX(-5deg);
+    transform: skewX(-5deg) scale(0.8);
     transition: all 0.3s cubic-bezier(.67,.09,.01,.86);
 }
 .projet{
@@ -341,7 +342,7 @@ body{
         display: block;
     }
     .menu-links.menu-view{
-    height: 30vh;
+    height: 22vh;
     transition: height 0.3s ease-in-out;
     width: 80vw;
     padding-top: 1rem;
@@ -360,6 +361,14 @@ body{
             
             .capture{
                 padding: 0;
+            }
+            .picture{
+                transform: scale(0.8);
+            }
+            .picture:hover{
+                img{
+                    box-shadow: 2px 4px #D3E97A;
+                }
             }
         }
         
